site: remove medium link for now.

--- a/site/partials/footer.html
+++ b/site/partials/footer.html
@@ -14,9 +14,9 @@
           <i class="fa fa-twitter"></i>
         </a>
 
-        <a class="icon" title="Medium" href="https://medium.com/proppyjs">
+        <!--<a class="icon" title="Medium" href="https://medium.com/proppyjs">
           <i class="fa fa-medium"></i>
-        </a>
+        </a>-->
       </p>
     </div>
   </div>
