--- a/site/partials/navLinks.html
+++ b/site/partials/navLinks.html
@@ -10,7 +10,7 @@
     Documentation
   </a>
 
-  <a href="/docs/packages/proppy#api" class="navbar-item is-tab">
+  <a href="/docs/api" class="navbar-item is-tab">
     API
   </a>
 
