--- a/site/partials/navLinks.html
+++ b/site/partials/navLinks.html
@@ -14,6 +14,10 @@
     API
   </a>
 
+  <a href="/docs/playground" class="navbar-item is-tab">
+    Playground
+  </a>
+
   <a href="https://github.com/fahad19/proppy" class="navbar-item is-tab">
     GitHub
   </a>
